# nash

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  readme.md
app/: readme.md  sh_0000.cpp  sh_sphere_viewer.cpp  viewer.cpp
app/demo/: CMakeLists.txt  sh_env.cpp  sh_sphere.cpp  sh_sphere_viewer.cpp
app/demo/helper/: sky_box_looper.hpp
app/demo/res/shader/: sh_env.frag.glsl  sh_env.vert.glsl
app/precompute/: calc_sh.cpp  env_coef_calculator.cpp  obj_coef_calculator.cpp
app/sh_env_demo/: CMakeLists.txt  sh_env.cpp  sh_env_demo.cpp
app/sh_env_demo/helper/: coefs_printer.hpp  coefs_updator.hpp  globals.hpp  looper.hpp  object_looper.hpp  set_sh_coefs.hpp  sh_color_spheres.hpp  sky_box_looper.hpp  sphere_looper.hpp
app/sh_env_demo/res/shader/: sh_env.frag.glsl
app/sh_env_shadow_demo/: CMakeLists.txt  sh_env_shadow_demo.cpp
app/sh_env_shadow_demo/helper/: coef_texture.hpp  env_coef_binder.hpp  mesh_coef_binder.hpp  mesh_coef_binder_old.hpp
app/sh_env_shadow_demo/res/shader/: coef_texture.frag.glsl  sh_env_shadow.frag.glsl  sh_env_shadow.vert.glsl
app/sh_env_shadow_demo/test/: mesh_coef_texture.cpp
app/theory/: CMakeLists.txt  show_all_sh_spheres.cpp  show_sh_sphere.cpp
lab/texture-filling/: index.html
res/coefs/env/: bridge3.env.coef  coittower2.env.coef  colors.env.coef  powerlines.env.coef  room.env.coef  tantolunden2.env.coef
res/scene/: readme.md  teapot_scene.json
res/shader/: default.frag.glsl  default.vert.glsl  plain_color.frag.glsl  plain_color.vert.glsl  plain_texture.frag.glsl  sh_sphere.frag.glsl  sh_sphere.vert.glsl
script/: add_clang_format_ignore.py  build  copy_res.cmake  generate_header.py  pre-commit
script/cmake/: copy_res.cmake
src/intern/adhoc/raytrace/: bounding_box.cpp  box_tree_mesh.cpp  box_tree_node.cpp  intersection.cpp  ray.cpp  triangle.cpp
src/intern/adhoc/script/: rotator.cpp  third_person_camera.cpp  toggle.cpp
src/intern/adhoc/sh/: mesh_sh_calculator.cpp  mesh_sh_generator.cpp  sh.cpp  sh_coefs.cpp  sh_color.cpp  sh_file.cpp  sh_sample.cpp  sh_sphere.cpp  sky_box_sh_calculator.cpp
src/intern/image/: cube_map.cpp  image.cpp  texture.cpp  texture_2d.cpp  texture_rect.cpp
src/intern/object/: cube.cpp  mesh.cpp  object.cpp  sphere.cpp
src/intern/object/adhoc/: colored_point_cloud.cpp  point_cloud.cpp  sky_box.cpp
src/intern/object/assimp/: assimp_mesh.cpp  assimp_node.cpp  assimp_object.cpp
src/intern/object/primitive/: cube.cpp  plane.cpp  sphere.cpp
src/intern/sh/: sh.cpp  sh_sphere.cpp
src/intern/utility/: init.cpp  math.cpp  path.cpp  sampler.cpp  script.cpp  shader.cpp  transform.cpp  transformation.cpp
src/intern/viewer/: camera.cpp  canvas.cpp  context.cpp  scene.cpp  viewer.cpp
test/: readme.md
test/adhoc/: move_test.cpp  third_person_camera_test.cpp  toggle_test.cpp  vector.cpp
test/assimp/: CMakeLists.txt  README.md  teapot_renderer.cpp  teapot_scene.cpp
test/file/: path_test.cpp  raw_get_exec_loc.cpp  sh_file_test.cpp
test/image/: CMakeLists.txt  colors_test.cpp  cube_map_iteration_test.cpp  cube_map_test.cpp  image_test.cpp  plain_texture_test.cpp
test/infra/: cube.cpp  cube_rotator.cpp  intersection_test.cpp  key_test.cpp  sh_sphere_rotator.cpp  sphere_rotator.cpp  toggle_test.cpp  viewer.cpp  viewer_with_cube.cpp
test/interaction/: move_test.cpp  third_person_camera_test.cpp  toggle_test.cpp
test/raytrace/: CMakeLists.txt  intersection_test.cpp  shading_teapot.cpp
test/sh/: CMakeLists.txt  colors_skybox_coef_test.cpp  env_shading_test.cpp  get_coef_index.cpp  get_grace_cathedral_coefs.cpp  get_room_coefs.cpp  grace_cathedral_skybox_coefs_test.cpp  obj_occ_visualizer.cpp  room_skybox_coef_test.cpp  sample_cube_map.cpp  sample_hemi_visualizer.cpp  sample_visualizer.cpp  sh_file_test.cpp  simp_desk.cpp
test/sh/deprecated/: env_shading_test.cpp
test/sh/helpers/: colored_point_cloud.hpp  looper.hpp
test/sh/res/shader/: env_shading.frag.glsl  env_shading.new.frag.glsl  env_shading.old.frag.glsl  env_shading.vert.glsl
